# Project1CSE335

./: .gitignore  CMakeLists.txt  README.md  SpartyApp.cpp  SpartyApp.h  main.cpp  pch.h
SpartyLib/: Angry.cpp  Angry.h  Background.cpp  Background.h  Block.cpp  Block.h  BodyItem.cpp  BodyItem.h  CMakeLists.txt  Consts.cpp  Consts.h  DebugDraw.h  Foe.cpp  Foe.h  FoeTracker.cpp  FoeTracker.h  Goalpost.cpp  Goalpost.h  GruffSparty.cpp  GruffSparty.h  HelmetSparty.cpp  HelmetSparty.h  Item.cpp  Item.h  ItemVisitor.h  KillFoeVisitor.cpp  KillFoeVisitor.h  Level.cpp  Level.h  MainFrame.cpp  MainFrame.h  Physics.cpp  Physics.h  Picture.cpp  Picture.h  PictureManager.cpp  PictureManager.h  PlayAreaSize.cpp  PlayAreaSize.h  PlayingArea.cpp  (+31 more)
Tests/: BackgroundTest.cpp  BlockTest.cpp  CMakeLists.txt  ClassInitTest.cpp  FoeTest.cpp  LevelTest.cpp  ScoreTest.cpp  SpartyGameTest.cpp  WoodenSlingshotTest.cpp
levels/: level0.xml  level3.xml
